2010-05-24 kazuhiko
* Improve activity dependencies for Delivery_updateAppliedRule, eg. delivery.activate(tag='(path)_updateAppliedRule', after_tag='(path)_expand').Delivery_updateAppliedRule(activate_kw={'tag':'(path)_expand'})

2010-04-09 kazuhiko
* Make it possible to sort/search on Project Module view.
* Allow Assignor to update validated Projects.

2010-03-17 tatuya
* Add a type based method so that Task document will find the applied rule.

2009-11-03 Sébastien Ost @ Idealis Consulting
* improve descriptions of several fields.
* improve descriptions of several portal types.
* rename fast input dialog forms.
* remove prototype forms and actions.

2009-10-16 rafael
* Update for the changes of new portal types of portal types.

2009-09-15 yo
* Show nearly the same columns in the dialog of related requirements on Project Line as in Requirement_view.

2009-09-11 yusei
* Fix Requirement type information and make view action the first priority.

2009-07-02 romain
* Revert latest proxy field library simplification, as the design was not finalized.

2009-05-19 yusei
* Fix some proxy fields. count_method and y_size_block should not be inherited from template field.

2009-05-11 yusei
* Bump up the version.
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
* Update dependencies.

2009-03-06 yusei
* Fix typo in notification message.

2009-01-07 fabien
* update some scripts used to generate domain to display planningbox. This permit to increase the speed of the page displaying (about 3 time faster in my tests)

2008-10-07 yusei
* Update field titles for translation.

2008-09-27 yusei
* Added checked_permission argument to contentValues method in
RequirementDocument_getOrphanedRequirementUidList and RequirementDocument_getProjectCoverageList.

2008-09-24 yusei
* Fixed a bug in Requirement_generateRequirements.

2008-09-22 yusei
* Fixed Generate References bug.

2008-09-16 Kazuhiko